[gd_scene load_steps=14 format=3 uid="uid://dma35pbfn8m8g"]

[ext_resource type="Texture2D" uid="uid://2si6vfln8py2" path="res://assets/title_screen.jpeg" id="1_fgkus"]
[ext_resource type="Theme" uid="uid://ck8mc8bdt2ucf" path="res://assets/game_theme.tres" id="1_mykxm"]
[ext_resource type="Script" uid="uid://egcmcr77xjo8" path="res://scripts/huds/title_screen.gd" id="1_sa3yf"]
[ext_resource type="Shader" uid="uid://ctxb6wxr1n42h" path="res://shaders/hurt.gdshader" id="3_3yumr"]
[ext_resource type="Texture2D" uid="uid://b1ocihbu04sdc" path="res://assets/boat-sail.png" id="4_cs5ya"]
[ext_resource type="Texture2D" uid="uid://ekkhbfqotawk" path="res://assets/livrea/livrea_a1.png" id="5_mykxm"]
[ext_resource type="Texture2D" uid="uid://f7xqgymvgmag" path="res://assets/livrea/livrea_b1.png" id="6_tklts"]
[ext_resource type="Texture2D" uid="uid://bebaitffrwg08" path="res://assets/boat-body.png" id="7_u26n3"]
[ext_resource type="Texture2D" uid="uid://dmco0ljbr2oav" path="res://assets/game_title.png" id="8_cs5ya"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ib7db"]
shader = ExtResource("3_3yumr")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="Animation" id="Animation_4jlpf"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(900, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(248, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.155865]
}

[sub_resource type="Animation" id="Animation_a4b44"]
resource_name = "open"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1280, -0.25, 0, 0.160428, 105.794, 900, -0.140674, -99.5259, 0.0270942, 19.1689),
"times": PackedFloat32Array(0, 0.433333)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(248, -0.25, 0, 0.25, 0, 248, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.155865]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7xci6"]
_data = {
&"RESET": SubResource("Animation_4jlpf"),
&"open": SubResource("Animation_a4b44")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mykxm")
script = ExtResource("1_sa3yf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fgkus")

[node name="Control" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 500)
layout_mode = 0
offset_left = 1280.0
offset_top = 248.0
offset_right = 2091.0
offset_bottom = 748.0
rotation = -0.155865

[node name="Control" type="Control" parent="Control"]
layout_mode = 2
anchors_preset = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 787.0
offset_bottom = 476.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="MarginContainer" parent="Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -418.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Control/Panel"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="Control/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../CustomColorContainer/VBoxContainer2/LivreaColorNextButton")
focus_neighbor_bottom = NodePath("../MusicButton")
theme_override_font_sizes/font_size = 64
text = "New Game"

[node name="MusicButton" type="Button" parent="Control/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../NewGameButton")
focus_neighbor_bottom = NodePath("../SoundButton")
theme_override_font_sizes/font_size = 32
toggle_mode = true
button_pressed = true
text = "Music: ON"

[node name="SoundButton" type="Button" parent="Control/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../MusicButton")
focus_neighbor_bottom = NodePath("../CustomColorContainer/VBoxContainer/LivreaAPrevButton")
theme_override_font_sizes/font_size = 32
toggle_mode = true
button_pressed = true
text = "Sound: ON
"

[node name="CustomColorContainer" type="HBoxContainer" parent="Control/Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="LivreaAPrevButton" type="Button" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../../../SoundButton")
focus_neighbor_top = NodePath("../../../SoundButton")
focus_neighbor_right = NodePath("../../VBoxContainer2/LivreaANextButton")
focus_neighbor_bottom = NodePath("../LivreaBPrevButton")
focus_next = NodePath("../../VBoxContainer2/LivreaANextButton")
focus_previous = NodePath("../../../SoundButton")
theme_override_font_sizes/font_size = 32
text = "<"

[node name="LivreaBPrevButton" type="Button" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../LivreaAPrevButton")
focus_neighbor_right = NodePath("../../VBoxContainer2/LivreaBNextButton")
focus_neighbor_bottom = NodePath("../LivreaColorPrevButton")
focus_next = NodePath("../../VBoxContainer2/LivreaBNextButton")
focus_previous = NodePath("../../VBoxContainer2/LivreaANextButton")
theme_override_font_sizes/font_size = 32
text = "<"

[node name="LivreaColorPrevButton" type="Button" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../../VBoxContainer2/LivreaBNextButton")
focus_neighbor_top = NodePath("../LivreaBPrevButton")
focus_neighbor_right = NodePath("../../VBoxContainer2/LivreaColorNextButton")
focus_neighbor_bottom = NodePath("../../../NewGameButton")
focus_next = NodePath("../../VBoxContainer2/LivreaColorNextButton")
focus_previous = NodePath("../../VBoxContainer2/LivreaBNextButton")
theme_override_font_sizes/font_size = 32
text = "<"

[node name="SubViewportContainer" type="SubViewportContainer" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(150, 250)
render_target_update_mode = 4

[node name="Boat" type="Node2D" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/SubViewportContainer/SubViewport"]
position = Vector2(-22.815, -50.895)

[node name="Sail" type="Sprite2D" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/SubViewportContainer/SubViewport/Boat"]
material = SubResource("ShaderMaterial_ib7db")
position = Vector2(100.7, 166.85)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_cs5ya")

[node name="Livrea" type="Node2D" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/SubViewportContainer/SubViewport/Boat/Sail"]
unique_name_in_owner = true
modulate = Color(1, 0, 1, 1)
position = Vector2(2, 0)

[node name="LivreaA" type="Sprite2D" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/SubViewportContainer/SubViewport/Boat/Sail/Livrea"]
unique_name_in_owner = true
texture = ExtResource("5_mykxm")

[node name="LivreaB" type="Sprite2D" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/SubViewportContainer/SubViewport/Boat/Sail/Livrea"]
unique_name_in_owner = true
texture = ExtResource("6_tklts")

[node name="Body" type="Sprite2D" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/SubViewportContainer/SubViewport/Boat"]
material = SubResource("ShaderMaterial_ib7db")
position = Vector2(99.7, 166.85)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_u26n3")

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="LivreaANextButton" type="Button" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../../VBoxContainer/LivreaAPrevButton")
focus_neighbor_top = NodePath("../../../SoundButton")
focus_neighbor_right = NodePath("../../VBoxContainer/LivreaBPrevButton")
focus_neighbor_bottom = NodePath("../LivreaBNextButton")
focus_next = NodePath("../../VBoxContainer/LivreaBPrevButton")
focus_previous = NodePath("../../VBoxContainer/LivreaAPrevButton")
theme_override_font_sizes/font_size = 32
text = ">"

[node name="LivreaBNextButton" type="Button" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../../VBoxContainer/LivreaBPrevButton")
focus_neighbor_top = NodePath("../LivreaANextButton")
focus_neighbor_right = NodePath("../../VBoxContainer/LivreaColorPrevButton")
focus_neighbor_bottom = NodePath("../LivreaColorNextButton")
focus_next = NodePath("../../VBoxContainer/LivreaColorPrevButton")
focus_previous = NodePath("../../VBoxContainer/LivreaBPrevButton")
theme_override_font_sizes/font_size = 32
text = ">"

[node name="LivreaColorNextButton" type="Button" parent="Control/Control/Panel/VBoxContainer/CustomColorContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../../VBoxContainer/LivreaColorPrevButton")
focus_neighbor_top = NodePath("../LivreaBNextButton")
focus_neighbor_right = NodePath("../../../NewGameButton")
focus_neighbor_bottom = NodePath("../../../NewGameButton")
focus_next = NodePath("../../../NewGameButton")
focus_previous = NodePath("../../VBoxContainer/LivreaColorPrevButton")
theme_override_font_sizes/font_size = 32
text = ">"

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 629.0
offset_top = 21.0
offset_right = 1186.0
offset_bottom = 155.0
texture = ExtResource("8_cs5ya")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7xci6")
}
autoplay = "open"

[connection signal="pressed" from="Control/Control/Panel/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="toggled" from="Control/Control/Panel/VBoxContainer/MusicButton" to="." method="_on_music_button_toggled"]
[connection signal="toggled" from="Control/Control/Panel/VBoxContainer/SoundButton" to="." method="_on_sound_button_toggled"]
[connection signal="pressed" from="Control/Control/Panel/VBoxContainer/CustomColorContainer/VBoxContainer/LivreaAPrevButton" to="." method="_on_livrea_a_prev_button_pressed"]
[connection signal="pressed" from="Control/Control/Panel/VBoxContainer/CustomColorContainer/VBoxContainer/LivreaBPrevButton" to="." method="_on_livrea_b_prev_button_pressed"]
[connection signal="pressed" from="Control/Control/Panel/VBoxContainer/CustomColorContainer/VBoxContainer/LivreaColorPrevButton" to="." method="_on_livrea_color_prev_button_pressed"]
[connection signal="pressed" from="Control/Control/Panel/VBoxContainer/CustomColorContainer/VBoxContainer2/LivreaANextButton" to="." method="_on_livrea_a_next_button_pressed"]
[connection signal="pressed" from="Control/Control/Panel/VBoxContainer/CustomColorContainer/VBoxContainer2/LivreaBNextButton" to="." method="_on_livrea_b_next_button_pressed"]
[connection signal="pressed" from="Control/Control/Panel/VBoxContainer/CustomColorContainer/VBoxContainer2/LivreaColorNextButton" to="." method="_on_livrea_color_next_button_pressed"]
